--- a/app/src/main/res/layout/activity_chat_screen.xml
+++ b/app/src/main/res/layout/activity_chat_screen.xml
@@ -53,7 +53,7 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:srcCompat="@drawable/pngegg" />
+                        app:srcCompat="@drawable/common_google_signin_btn_icon_disabled" />
 
                     <com.google.android.material.textview.MaterialTextView
                         android:id="@+id/user_name"
