--- a/app/src/main/res/layout/chatlist_row.xml
+++ b/app/src/main/res/layout/chatlist_row.xml
@@ -6,8 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardElevation="5dp"
     app:cardCornerRadius="20dp"
-    android:layout_margin="9dp"
-    >
+    android:layout_margin="9dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -17,10 +16,8 @@
             android:id="@+id/ivImg"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:src=""
             android:layout_margin="10dp"
-            app:shapeAppearanceOverlay="@style/SoftCorner"
-            />
+            app:shapeAppearanceOverlay="@style/SoftCorner"/>
 
         <TextView
             android:id="@+id/tvQuote"
