--- a/app/src/main/res/layout/chatlist_row.xml
+++ b/app/src/main/res/layout/chatlist_row.xml
@@ -17,7 +17,7 @@
             android:id="@+id/ivImg"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:src=""
+            android:src="@drawable/pngegg"
             android:layout_margin="10dp"
             app:shapeAppearanceOverlay="@style/SoftCorner"
             />
