--- a/app/src/main/res/layout/sample_receiver.xml
+++ b/app/src/main/res/layout/sample_receiver.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-
     android:layout_marginStart="5dp"
     android:layout_marginLeft="5dp"
     android:layout_marginTop="4dp"
@@ -15,40 +18,41 @@
     android:minWidth="55dp">
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/recieverTxt"
+        android:id="@+id/receiverText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="9dp"
+        android:layout_marginStart="15dp"
         android:layout_marginTop="8dp"
         android:inputType="textLongMessage|textMultiLine"
         android:maxWidth="270dp"
         android:minWidth="0dp"
-        android:text="okay"
-        android:gravity="center"
-        app:layout_constraintBottom_toTopOf="@+id/recieverTime"
-        app:layout_constraintEnd_toEndOf="@id/recieverTime"
+        android:text="hii"
+        app:layout_constraintBottom_toTopOf="@+id/receiverTime"
+        app:layout_constraintEnd_toEndOf="@id/receiverTime"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/recieverTime"
+        android:id="@+id/receiverTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="20dp"
+        android:layout_marginEnd="10dp"
         android:layout_marginBottom="3dp"
-        android:text="15:35"
+        android:text="10:35 PM"
         android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideLine"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="10dp"/>
+<!--    <androidx.constraintlayout.widget.Guideline-->
+<!--        android:id="@+id/guideLine"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:orientation="vertical"-->
+<!--        app:layout_constraintGuide_begin="10dp"/>-->
 
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+</RelativeLayout>
