--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -51,7 +51,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Delete message"
+            android:text="Delete message for me"
             android:layout_marginLeft="15dp"
             android:textSize="16sp"/>
 
