--- a/app/src/main/res/layout/sample_sender.xml
+++ b/app/src/main/res/layout/sample_sender.xml
@@ -4,6 +4,8 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
+
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -15,6 +17,10 @@
         android:maxHeight="400dp"
         android:minHeight="0dp"
         android:background="@drawable/bg_sender">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/senderText"
@@ -33,6 +39,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="1.0"/>
 
+
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/senderTime"
             android:layout_width="wrap_content"
@@ -45,6 +52,8 @@
             app:layout_constraintEnd_toEndOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
 
 </RelativeLayout>
