--- a/app/src/main/res/layout/activity_chat_screen.xml
+++ b/app/src/main/res/layout/activity_chat_screen.xml
@@ -54,7 +54,7 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:srcCompat="@drawable/common_google_signin_btn_icon_disabled" />
+                        app:srcCompat="@drawable/ic_profile_placeholder_fg" />
 
                     <com.google.android.material.textview.MaterialTextView
                         android:id="@+id/user_name"
@@ -62,6 +62,7 @@
                         android:layout_height="wrap_content"
                         android:text="user_name"
                         android:textColor="@color/black"
+                        android:layout_gravity="center"
                         app:layout_constraintEnd_toEndOf="@+id/profile"
                         app:layout_constraintStart_toStartOf="@+id/profile"
                         app:layout_constraintTop_toBottomOf="@+id/profile" />
