--- a/app/src/main/res/layout/sample_sender.xml
+++ b/app/src/main/res/layout/sample_sender.xml
@@ -5,8 +5,6 @@
     android:id="@+id/sender"
     android:layout_height="wrap_content">
 
-
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -16,7 +14,8 @@
         android:layout_marginEnd="7dp"
         android:maxWidth="310dp"
         android:maxHeight="400dp"
-        android:minHeight="0dp"
+        android:minHeight="45dp"
+        android:minWidth="65dp"
         android:background="@drawable/bg_sender">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -27,30 +26,42 @@
             android:id="@+id/senderText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="15dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginStart="15dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="5dp"
             android:inputType="textLongMessage|textMultiLine"
             android:maxWidth="270dp"
             android:minWidth="0dp"
-            android:text="dlkghdkgbdkjfgbdjfgjfgndkjfgdkjhgdjghdjfghdkjgdkjfghdfkjghdfkjg"
-            app:layout_constraintBottom_toTopOf="@+id/senderTime"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:text="."
+            app:layout_constraintEnd_toEndOf="@+id/msgStatus"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="1.0"/>
-
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/senderTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="3dp"
-            android:layout_marginEnd="12dp"
+            android:layout_marginEnd="1dp"
             android:text="12:45 PM"
             android:textSize="10sp"
+            app:layout_constraintTop_toBottomOf="@+id/senderText"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toStartOf="@+id/msgStatus"/>
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/msgStatus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_check"
+            android:layout_marginBottom="3dp"
+            android:layout_marginEnd="5dp"
+            app:layout_constraintTop_toBottomOf="@+id/senderText"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
