--- a/app/src/main/res/drawable/bg_receiver.xml
+++ b/app/src/main/res/drawable/bg_receiver.xml
@@ -14,7 +14,7 @@
 <!--    </item>-->
     <item android:left="0dp">
         <shape android:shape="rectangle" >
-            <solid android:color="@android:color/holo_purple" />
+            <solid android:color="@color/material_dynamic_secondary50" />
             <corners android:radius="25dp" />
         </shape>
     </item>
