--- a/app/src/main/res/layout/activity_chat_screen.xml
+++ b/app/src/main/res/layout/activity_chat_screen.xml
@@ -126,7 +126,7 @@
                     android:layout_height="50dp"
                     android:backgroundTint="@android:color/transparent"
                     android:src="@drawable/ic_emoji_button"
-                    android:tint="@color/black" />
+                    android:tint="@color/material_dynamic_primary40" />
 
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -144,16 +144,16 @@
 
         <ImageView
             android:id="@+id/sendMsg"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="40dp"
+            android:layout_height="45dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="1dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="1dp"
             app:srcCompat="@drawable/ic_send_button"
-            app:tint="@color/black" />
+            app:tint="@color/material_dynamic_primary40" />
 
     </RelativeLayout>
 
