--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -18,7 +19,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
-            android:src="@drawable/ic_copy"/>
+            android:src="@drawable/ic_copy"
+            app:tint="@color/material_dynamic_primary40" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -46,7 +48,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
-            android:src="@drawable/ic_delete"/>
+            android:src="@drawable/ic_delete"
+            app:tint="@color/material_dynamic_primary40"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -61,7 +64,7 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:orientation="horizontal"
-        android:background="@color/white"
+        android:background="@color/material_dynamic_primary10"
         android:layout_margin="10dp"/>
 
     <LinearLayout
@@ -77,10 +80,12 @@
 
         <ImageView
             android:id="@+id/seenMsg"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:layout_marginLeft="15dp"
-            android:src="@drawable/ic_check"/>
+            android:src="@drawable/ic_check"
+            android:layout_gravity="center"
+            app:tint="@color/material_dynamic_primary40"/>
 
         <TextView
             android:layout_width="wrap_content"
