--- a/app/src/main/res/layout/dialoguebox_for_video_call_req_alert.xml
+++ b/app/src/main/res/layout/dialoguebox_for_video_call_req_alert.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_centerInParent="true"
+    android:backgroundTint="@color/material_dynamic_secondary95"
     android:background="@drawable/round_corner_theme"
     android:layout_marginStart="30dp"
     android:layout_marginEnd="30dp"
