--- a/app/src/main/res/drawable/border_edittext.xml
+++ b/app/src/main/res/drawable/border_edittext.xml
@@ -6,7 +6,7 @@
         <shape android:shape="rectangle">
             <solid android:color="@android:color/white" />
             <corners android:radius="12dp" />
-            <stroke android:width="2dp" android:color="@color/purple" />
+            <stroke android:width="2dp" android:color="@color/black" />
         </shape>
     </item>
 
