--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -36,7 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@android:color/transparent"
-        android:src="@drawable/camera"
+        android:src="@drawable/ic_camera"
         android:tint="@color/black"
         app:layout_constraintBottom_toBottomOf="@+id/ivProfileImg"
         app:layout_constraintEnd_toEndOf="@+id/ivProfileImg"
